--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -5,6 +5,9 @@ defaults:
   run:
     shell: bash
 
+env:
+  GITLINK: ${{ secrets.TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,6 +20,7 @@ jobs:
     - run: source script-linux.sh
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@master
+      continue-on-error: true
     - uses: actions/upload-artifact@v2
       with:
           name: my-artifact
