--- a/.github/workflows/code-server-algotunnel.yml
+++ b/.github/workflows/code-server-algotunnel.yml
@@ -14,4 +14,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: source code-server-argo.sh
+      - run: source code-server-algotunnel.sh
